# FlyFF-Resource-Framework

./: CMakeLists.txt  gitignore
src/backend/: ConfigManager.cpp  ConfigManager.h  FileManager.cpp  FileManager.h
src/core/: ProjectController.cpp  ProjectController.h  main.cpp
src/data/: ControlData.h  ControlType.h  ProcessedThemeColors.cpp  ProcessedThemeColors.h  ThemeColors.cpp  ThemeColors.h  TokenData.h  WindowData.h
src/engine/: BehaviorEngine.cpp  BehaviorEngine.h  ControlTypeMapper.cpp  ControlTypeMapper.h  LayoutEngine.cpp
src/managers/: BehaviorManager.cpp  BehaviorManager.h  DefineManager.cpp  DefineManager.h  LayoutManager.cpp  LayoutManager.h  RenderManager.cpp  RenderManager.h  TextManager.cpp  TextManager.h  ThemeManager.cpp  ThemeManager.h
src/modules/layout/: LayoutEngine.h  LayoutParser.cpp  LayoutParser.h
src/render/: IControlRender.h  RenderControls.cpp  RenderControls.h  RenderMode.h  RenderWindow.cpp  RenderWindow.h
src/render/controls/: EditBackground.cpp  EditBackground.h  RenderButton.cpp  RenderButton.h  RenderComboBox.cpp  RenderComboBox.h  RenderCustom.cpp  RenderCustom.h  RenderEdit.cpp  RenderEdit.h  RenderGroupBox.cpp  RenderGroupBox.h  RenderListBox.cpp  RenderListBox.h  RenderRadio.cpp  RenderScrollBar.cpp  RenderScrollBar.h  RenderStatic.cpp  RenderStatic.h  RenderTabControl.cpp  RenderTabControl.h
src/ui/: Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  PropertyPanel.cpp  PropertyPanel.h  WindowPanel.cpp  WindowPanel.h
src/utils/: BaseManager.cpp  BaseManager.h  EncodingUtils.h  ResourceUtils.h
